# gepitanulas-nagyhazi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_projectpaths.py  test_robot.py  test_warehouse.py
whouserobot/: __init__.py  projectpaths.py  robot.py  warehouse.py
