# Main package description
[tool.poetry]
name = "whouserobot"
version = "0.0.1"
description = "A nagy házi feladatom gépi tanuláshoz"
authors = [
    "Krisztian Gado <g.krisztian@outlook.com>",
]
license = "WTFPL"

[tool.poetry.dependencies]
python = ">3.8, <3.10"
numpy = "^1.21.4"
matplotlib = "^3.4.3"
networkx = "^2.6.3"
scipy = "^1.7.3"


[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
pre-commit = "*"
pytest = "*"
isort = "*"
pyupgrade = "^2.29"
pylint = "^2.11.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
'''
quiet = true

[tool.coverage.run]
command_line = "-m py.test"
source = ['whouserobot']
branch = true
# omit = []

[tool.coverage.report]
sort = "cover"
exclude_lines = [
    'if __name__ == "__main__":',
    'def __repr__',
    'def __str',
    '@(abc\.)?abstractmethod'
]
omit = ['tests']


[tool.isort]
profile = "black"
line_length = 120
case_sensitive = true
use_parentheses = false
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
quiet = true
skip="__init__.py"

[tool.pylint.MASTER]
max-line-length = 120
fail-under = 0.85
ignore = ['LICENSE']
ignore-paths = ['tests']
disable = [
    "bad-continuation",
    "duplicate-code",
    "invalid-name",
    "missing-docstring",
    "too-few-public-methods",
]